--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\23-may.js",
+            "program": "${workspaceFolder}\\practice\\6.June\\permutations.js",
             "console": "integratedTerminal"
         }
     ]
